# ccq

./: .clang-format  .gitignore  :wq  README.md  ccq  ccq-add.c  ccq-edit.c  ccq-lookup  ccq-lookup.c  ccq-mine.fnl  ccq-review.c  ccq-schedule.c  ccq.1  ccq.5  ccq.7  ccq.c  ccq.cast  ccq.h  ccq.h.gch  ccq2  ccq2.c  ccq_old.c  config.h  config.h.in  csv-template  db  fsrs-scheduler.c  fsrs_scheduler.c  gmon.out  main.c  master.json  meson.build  readme.md  sample  simple_deck.json  test  test.c  test_dic  test_file  test_wrd  (+3 more)
.cache/clangd/index/: config.h.7575C8FE1C736F00.idx  main.c.D881EAF80B406454.idx
ARHGAP11B/: main  main.c  readme  scheduler.c
FOXP2/: fox  main.c  main_debug.c  readme
utils/: files_txtlist.py
